--- a/global.css
+++ b/global.css
@@ -132,12 +132,13 @@ table{
 	table-layout: fixed;
 	border-color: var(--color1);
 	background: white;
+	border-left: 0.1em solid var(--color1);
+	border-right: 0.1em solid var(--color1);
 }
 
 td, th{
-	border: 0.1em solid var(--color1);
-	border-left: none;
-	border-right: none;
+	border-top: 0.1em solid var(--color1);
+	border-bottom: 0.1em solid var(--color1);
 }
 
 th{
