--- a/global.css
+++ b/global.css
@@ -74,6 +74,8 @@ a{
 input, select, option{
 	font-family: sans-serif;
 	font-size: var(--fontSize);
+	padding: 0.1em;
+	width: calc(100% - 0.1em);
 }
 
 select{
