--- a/global.css
+++ b/global.css
@@ -167,7 +167,7 @@ tbody tr:nth-of-type(even) {
 .hasLink:hover{
 	color: white;
 	background: var(--color1);
-	font-weight: bold;
+	cursor: pointer;
 }
 
 /*/////////////////////////////// Buttons ///////////////////////////////*/
