Correct Prompt Width

--- a/global.css
+++ b/global.css
@@ -273,7 +273,7 @@ tr{
 /*/////////////////////////////// Pop-Up Prompts ///////////////////////////////*/
 
 #promptBox{
-	width:max(max-content, 25em);
+	width:25em;
 	background: hsl(0, 0%, 98%);
 	padding: 2.5em;
 	height: max-content;
