Added Desktop Only Class

--- a/global.css
+++ b/global.css
@@ -380,3 +380,13 @@ input[ type = "checkbox" ]:checked ~ .toggle{
 	font-weight: bolder;
 	margin-right: 0.2em;
 }
+
+/*/////////////////////////////// Mobile ///////////////////////////////*/
+
+@media screen and (max-width: 120vh) { /* All contents apply on mobile */
+
+	.desktopOnly{
+		display: none;
+	}
+
+}
