--- a/global.css
+++ b/global.css
@@ -324,6 +324,7 @@ input[ type = "checkbox" ]:checked ~ .toggle{
 	left: 50%;
 	overflow: hidden;
 	display: none;
+	flex-wrap: wrap;
 }
 
 .promptHeading{
