Wrap Scroll Box

--- a/global.css
+++ b/global.css
@@ -336,6 +336,11 @@ input[ type = "checkbox" ]:checked ~ .toggle{
 }
 
 .promptScrollBox{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
 	margin-top: 1em;
 	height: max-content;
 	max-height: calc(90vh - 9em - (var(--fontSize) * 1.2) - 0.5em);
